word embeddings updatE

--- a/word_embeddings/Makefile
+++ b/word_embeddings/Makefile
@@ -20,9 +20,9 @@ cyc_word_embeddings_cyc_sgd_run:
 
 cyc_word_embeddings_hog:
 	rm -rf word_embeddings_hog
-	g++ -Ofast -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -DHOG=1 -o word_embeddings_hog
+	g++ -O3 -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread  -DHOG=1 -o word_embeddings_hog
 	./word_embeddings_hog
 cyc_word_embeddings_cyc:
 	rm -rf word_embeddings_cyc
-	g++ -Ofast -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -DCYC=1 -o word_embeddings_cyc
+	g++ -O3 -std=c++11  cyclades_word_embeddings.cpp -lnuma -lpthread -DCYC=1 -o word_embeddings_cyc
 	./word_embeddings_cyc
