Revert to least squares

--- a/word_embeddings/Makefile
+++ b/word_embeddings/Makefile
@@ -4,6 +4,21 @@ NTHREAD=8
 SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=0
 START_GAMMA=.1
 
+cyc_word_embeddings_cyc_compile:
+	g++ -Ofast -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc \
+	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DRLENGTH=$(RLENGTH) \
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 
+cyc_word_embeddings_cyc_run:
+	@./word_embeddings_cyc
+
+cyc_word_embeddings_hog_compile:
+	g++ -Ofast -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
+	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DRLENGTH=$(RLENGTH) \
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAG=1 
+
+cyc_word_embeddings_hog_run:
+	@./word_embeddings_hog
+
 cyc_word_embeddings_cyc_sag_compile:
 	g++ -Ofast -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sag \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DRLENGTH=$(RLENGTH) \
@@ -20,9 +35,9 @@ cyc_word_embeddings_cyc_sgd_run:
 
 cyc_word_embeddings_hog:
 	rm -rf word_embeddings_hog
-	g++ -O3 -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread  -DHOG=1 -o word_embeddings_hog
+	g++  -Ofast -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread  -DHOG=1 -o word_embeddings_hog
 	./word_embeddings_hog
 cyc_word_embeddings_cyc:
 	rm -rf word_embeddings_cyc
-	g++ -O3 -std=c++11  cyclades_word_embeddings.cpp -lnuma -lpthread -DCYC=1 -o word_embeddings_cyc
+	g++ -Ofast -std=c++11  cyclades_word_embeddings.cpp -lnuma -lpthread -DCYC=1 -o word_embeddings_cyc
 	./word_embeddings_cyc
