--- a/word_embeddings/Makefile
+++ b/word_embeddings/Makefile
@@ -2,6 +2,7 @@ N_EPOCHS=150
 BATCH_SIZE=200
 NTHREAD=8
 SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=0
+START_GAMMA=0
 
 cyc_word_embeddings_hog_sag_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
@@ -26,6 +27,13 @@ cyc_word_embeddings_cyc_sag_compile:
 cyc_word_embeddings_cyc_sag_run:
 	@./word_embeddings_cyc_sag
 
+cyc_word_embeddings_cyc_sag2_compile:
+	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sag \
+	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 -DSTART_GAMMA=$(START_GAMMA)
+cyc_word_embeddings_cyc_sag2_run:
+	@./word_embeddings_cyc_sag
+
 cyc_word_embeddings_cyc_sgd_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sgd \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
@@ -48,3 +56,22 @@ cyc_word_embeddings_cyc_batch_tune:
 		g++ -fopenmp -Ofast -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -DCYC=1 -DBATCH_SIZE=$$number -o tune_batch; \
 		./tune_batch; \
 	done
+
+cyc_word_embeddings_serial:
+	g++ -Ofast -std=c++11 cyclades_word_embeddings_serial.cpp -o serial
+	./serial
+
+
+
+
+# Serial
+
+cyc_word_embeddings_serial_compile:
+	g++ -Ofast -std=c++11 cyclades_word_embeddings_serial.cpp -o serial -DSHUFFLE=0
+cyc_word_embeddings_serial_run:
+	@./serial
+
+cyc_word_embeddings_serial_shuffle_compile:
+	g++ -Ofast -std=c++11 cyclades_word_embeddings_serial.cpp -o serial2 -DSHUFFLE=1
+cyc_word_embeddings_serial_shuffle_run:
+	@./serial2
