--- a/word_embeddings/Makefile
+++ b/word_embeddings/Makefile
@@ -2,7 +2,6 @@ N_EPOCHS=150
 BATCH_SIZE=200
 NTHREAD=8
 SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=0
-START_GAMMA=0
 
 cyc_word_embeddings_hog_sag_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
@@ -23,21 +22,21 @@ cyc_word_embeddings_hog_sgd_run:
 cyc_word_embeddings_cyc_sag_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sag \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 -DSTART_GAMMA=$(START_GAMMA)
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 
 cyc_word_embeddings_cyc_sag_run:
 	@./word_embeddings_cyc_sag
 
 cyc_word_embeddings_cyc_sag2_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sag \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 -DSTART_GAMMA=$(START_GAMMA)
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 
 cyc_word_embeddings_cyc_sag2_run:
 	@./word_embeddings_cyc_sag
 
 cyc_word_embeddings_cyc_sgd_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sgd \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=0 -DSTART_GAMMA=$(START_GAMMA)
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=0 
 cyc_word_embeddings_cyc_sgd_run:
 	@./word_embeddings_cyc_sgd
 
