--- a/word_embeddings/Makefile
+++ b/word_embeddings/Makefile
@@ -2,13 +2,22 @@ N_EPOCHS=150
 BATCH_SIZE=200
 NTHREAD=8
 SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=0
+START_GAMMA=1e-6
 
-cyc_word_embeddings_hog_sag_compile:
+cyc_word_embeddings_hog_saga_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAG=1 
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAG=1 -DSTART_GAMMA=$(START_GAMMA)
 
-cyc_word_embeddings_hog_sag_run:
+cyc_word_embeddings_hog_saga_run:
+	@./word_embeddings_hog
+
+cyc_word_embeddings_hog_saga_diverge_compile:
+	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
+	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAG=1 -DSTART_GAMMA=$(START_GAMMA)
+
+cyc_word_embeddings_hog_saga_diverge_run:
 	@./word_embeddings_hog
 
 cyc_word_embeddings_hog_sgd_compile:
@@ -19,11 +28,11 @@ cyc_word_embeddings_hog_sgd_compile:
 cyc_word_embeddings_hog_sgd_run:
 	@./word_embeddings_hog
 
-cyc_word_embeddings_cyc_sag_compile:
+cyc_word_embeddings_cyc_saga_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sag \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 
-cyc_word_embeddings_cyc_sag_run:
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1  -DSTART_GAMMA=$(START_GAMMA)
+cyc_word_embeddings_cyc_saga_run:
 	@./word_embeddings_cyc_sag
 
 cyc_word_embeddings_cyc_sag2_compile:
