Update word embeddings

--- a/word_embeddings/Makefile
+++ b/word_embeddings/Makefile
@@ -7,7 +7,7 @@ START_GAMMA=1e-6
 cyc_word_embeddings_hog_saga_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAG=1 -DSTART_GAMMA=$(START_GAMMA)
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAGA=1 -DSTART_GAMMA=$(START_GAMMA)
 
 cyc_word_embeddings_hog_saga_run:
 	@./word_embeddings_hog
@@ -15,7 +15,7 @@ cyc_word_embeddings_hog_saga_run:
 cyc_word_embeddings_hog_saga_diverge_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAG=1 -DSTART_GAMMA=$(START_GAMMA)
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAGA=1 -DSTART_GAMMA=$(START_GAMMA)
 
 cyc_word_embeddings_hog_saga_diverge_run:
 	@./word_embeddings_hog
@@ -23,7 +23,7 @@ cyc_word_embeddings_hog_saga_diverge_run:
 cyc_word_embeddings_hog_sgd_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_hog \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAG=0 
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=1 -DCYC=0 -DSAGA=0 -DSTART_GAMMA=$(START_GAMMA)
 
 cyc_word_embeddings_hog_sgd_run:
 	@./word_embeddings_hog
@@ -38,14 +38,14 @@ cyc_word_embeddings_cyc_saga_run:
 cyc_word_embeddings_cyc_sag2_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sag \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=1 
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAGA=1 
 cyc_word_embeddings_cyc_sag2_run:
 	@./word_embeddings_cyc_sag
 
 cyc_word_embeddings_cyc_sgd_compile:
 	g++ -Ofast -fopenmp -std=c++11 cyclades_word_embeddings.cpp -lnuma -lpthread -o word_embeddings_cyc_sgd \
 	-DN_EPOCHS=$(N_EPOCHS) -DBATCH_SIZE=$(BATCH_SIZE) -DNTHREAD=$(NTHREAD) -DK=$(K) \
-	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAG=0 
+	-DSHOULD_SYNC=$(SHOULD_SYNC) -DSHOULD_PRINT_LOSS_TIME_EVERY_EPOCH=$(SHOULD_PRINT_LOSS_TIME_EVERY_EPOCH) -DHOG=0 -DCYC=1 -DSAGA=0 -DSTART_GAMMA=$(START_GAMMA)
 cyc_word_embeddings_cyc_sgd_run:
 	@./word_embeddings_cyc_sgd
 
